--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch",
-    "test": "tsc --noEmit",
-    "build": "tsc -p"
+    "start": "ts-node-dev server.ts",
+    "dev": "ts-node-dev server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jest": "^28.1.1",
+    "listening-on": "^2.0.8",
     "pg": "^8.7.3",
+    "socket.io": "^4.5.1",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
