add knex create first DB table

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
   POSTGRES_DB:  braille
   POSTGRES_USER: CICD
   POSTGRES_PASSWORD: CICD
-  # POSTGRES_HOST:
+  POSTGRES_HOST: postgres
 
 testing:
   # services:
