--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.22.2"
+    "@playwright/test": "^1.22.2",
+    "jest": "^28.1.1",
+    "knex": "^2.1.0",
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -22,13 +25,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "jest": "^28.1.1",
     "listening-on": "^2.0.8",
     "pg": "^8.7.3",
     "socket.io": "^4.5.1",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
 }
