--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
+    "module": "CommonJS",
+    "target": "ES6",
     "lib": ["es6", "dom"],
     "sourceMap": true,
     "allowJs": true,
