--- a/Express/package.json
+++ b/Express/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "ts-node-dev server.ts",
     "dev": "ts-node-dev server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.22.2",
+    "@types/node-fetch": "^2.6.1",
     "jest": "^28.1.1",
     "knex": "^2.1.0",
     "ts-node-dev": "^2.0.0"
@@ -26,10 +27,12 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "listening-on": "^2.0.8",
+    "node-fetch": "^3.2.6",
     "pg": "^8.7.3",
     "socket.io": "^4.5.1",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "yarn": "^1.22.19"
   }
 }
