--- a/Express/package.json
+++ b/Express/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.22.2",
+    "@types/formidable": "^2.0.5",
     "@types/node-fetch": "^2.6.1",
+    "formidable": "^2.0.1",
     "jest": "^28.1.1",
     "knex": "^2.1.0",
     "ts-node-dev": "^2.0.0"
