--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,14 @@
-stages:
-  - docker
-services:
-  - docker:dind
-docker-job:
- stage: docker
- image: docker
- script:
-  - echo docker login registry.gitlab.com
-  - docker build -t registry.gitlab.com/vxxxxc/tecky_c20tw_bad_project .
-  - docker push registry.gitlab.com/vxxxxc/tecky_c20tw_bad_project
-
-
-
+# stages:
+#   - docker
+# services:
+#   - docker:dind
+# docker-job:
+#  stage: docker
+#  image: docker
+#  script:
+#   - echo docker login registry.gitlab.com
+#   - docker build -t registry.gitlab.com/vxxxxc/tecky_c20tw_bad_project .
+#   - docker push registry.gitlab.com/vxxxxc/tecky_c20tw_bad_project
 
 # image: node:latest
 
@@ -19,7 +16,6 @@ docker-job:
 #   - testing
 #   - build
 #   - deploy
-  
 
 # variables:
 #   POSTGRES_DB: braille
@@ -38,12 +34,11 @@ docker-job:
 #     script:
 #       - yarn jest
 
-
 #    build:
 #     dependenies:
 #       - test
 #      before_script:
-#        - cd Tecky_C20TW_BAD_Project/express  
+#        - cd Tecky_C20TW_BAD_Project/express
 #     stage: build
 #     script:
 #       - yarn init
