--- a/Express/package.json
+++ b/Express/package.json
@@ -13,29 +13,30 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.22.2",
+    "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.5",
+    "@types/jest": "^28.1.1",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^17.0.40",
     "@types/node-fetch": "^2.6.1",
+    "@types/pg": "^8.6.5",
     "formidable": "^2.0.1",
     "jest": "^28.1.1",
-    "ts-node-dev": "^2.0.0"
+    "knex": "^2.1.0",
+    "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3",
+    "yarn": "^1.22.19"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.40",
-    "@types/pg": "^8.6.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "knex": "^2.1.0",
     "listening-on": "^2.0.8",
     "node-fetch": "^2.6.7",
     "pg": "^8.7.3",
     "py": "^0.0.0",
-    "socket.io": "^4.5.1",
-    "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3",
-    "yarn": "^1.22.19"
+    "socket.io": "^4.5.1"
   }
 }
