--- a/Express/tsconfig.json
+++ b/Express/tsconfig.json
@@ -13,7 +13,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "exclude": ["node_modules", "build", "scripts", "index.js"]
 }
