--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,8 +91,8 @@ stages:
 
 variables:
   POSTGRES_DB: braille
-  POSTGRES_USER: CICD
-  POSTGRES_PASSWORD: CICD
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: postgres
 
   test:
