--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 image: node:16.15.0-slim
 
 stages:
@@ -6,10 +5,10 @@ stages:
   - deploy
 
 variables:
-  POSTGRES_DB: braille
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
-  POSTGRES_HOST: postgres
+  POSTGRES_DB: "braille"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "postgres"
+  POSTGRES_HOST: "postgres"
 
   test:
     services:
