--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,9 @@ image: node:16.15.0-slim
 
 stages:
   - testing
+  - build
   - deploy
+
 variables:
   POSTGRES_DB: braille
   POSTGRES_USER: postgres
@@ -21,7 +23,7 @@ variables:
       - npm test
 
   build:
-    dependenies:
+    dependencies:
       - test
     before_script:
       - cd Tecky_C20TW_BAD_Project/express
@@ -30,7 +32,7 @@ variables:
       - npm run build
 
   deploy:
-    dependenies:
+    dependencies:
       - build
     before_script:
       - apt update
@@ -44,7 +46,7 @@ variables:
     only:
       - production
     image:
-      - ububtu:22.04
+      - ubuntu:22.04
     script:
       - echo "commit_hash = $CI-COMMIT_SHA"
       - ssh server " source -/.nvm/nvm.sh &&\ cd ~/Tecky_C20TW_BAD_Project &&\
