--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,8 +45,8 @@ variables:
     stage: deploy
     only:
       - production
-    image:
-      - ubuntu:22.04
+    # image:
+    #   - ubuntu:22.04
     script:
       - echo "commit_hash = $CI-COMMIT_SHA"
       - ssh server " source -/.nvm/nvm.sh &&\ cd ~/Tecky_C20TW_BAD_Project &&\
