--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - deploy
 
 variables:
-  POSTGRES_DB: bad009-test
+  POSTGRES_DB: "braille"
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "postgres"
   POSTGRES_HOST: "postgres"
