--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: node:16.15.0-slim
 
 stages:
   - testing
-  - build
+  # - build
   # - deploy
 
 variables:
@@ -22,14 +22,14 @@ variables:
     script:
       - npm test
 
-  build:
-    dependencies:
-      - test
-    before_script:
-      - cd Tecky_C20TW_BAD_Project/express
-    stage: build
-    script:
-      - npm run build
+  # build:
+  #   dependencies:
+  #     - test
+  #   before_script:
+  #     - cd Tecky_C20TW_BAD_Project/express
+  #   stage: build
+  #   script:
+  #     - npm run build
 
   # deploy:
   #   dependencies:
