--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,54 +1,20 @@
-image: node:16.15.0-slim
+image: node:latest
 
 stages:
   - testing
-  # - build
-  # - deploy
 
 variables:
-  POSTGRES_DB: "braille"
-  POSTGRES_USER: "postgres"
-  POSTGRES_PASSWORD: "postgres"
-  POSTGRES_HOST: "postgres"
+  POSTGRES_DB: bad009-test
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_HOST: postgres
 
-  testing:
-    services:
-      - postgres:latest
-    before_script:
-      - cd Tecky_C20TW_BAD_Project/Express
-      - npm i -g pnpm
-      - pnpm i
-    stage: testing
-    script:
-      - npm test
+testing:
+  services:
+    - postgres:latest
 
-  # build:
-  #   dependencies:
-  #     - test
-  #   before_script:
-  #     - cd Tecky_C20TW_BAD_Project/express
-  #   stage: build
-  #   script:
-  #     - npm run build
-
-  # deploy:
-  #   dependencies:
-  #     - build
-  #   before_script:
-  #     - apt update
-  #     - apt install --yes git openssh-client
-  #     - mkdir -p ~/.ssh
-  #     - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-  #     - chmod 600 ~/.ssh/id_rsa
-  #     - ssh -keyscan
-  #     - cd Tecky_C20TW_BAD_Project
-  #   stage: deploy
-  #   only:
-  #     - production
-  #   image:
-  #     - ubuntu:22.04
-  #   script:
-  #     - echo "commit_hash = $CI-COMMIT_SHA"
-  #     - ssh server " source -/.nvm/nvm.sh &&\ cd ~/Tecky_C20TW_BAD_Project &&\
-  #       git fetch &&\ pnpm i -- prod &&\ cd Tecky_C20TW_BAD_Project/express &&\
-  #       yarn knex migrate:latest &&\ forever restart server.ts;"
+  before_script:
+    - yarn install
+  stage: testing
+  script:
+    - echo "hi~"
