--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,13 @@ variables:
   POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: postgres
 
-testing:
-  services:
-    - postgres:latest
-
-  before_script:
-    - yarn install
-  stage: testing
-  script:
-    - echo "hi~"
+  testing:
+    services:
+      - postgres:latest
+    before_script:
+      - cd Tecky_C20TW_BAD_Project/Express
+      - npm i -g pnpm
+      - pnpm i
+    stage: testing
+    script:
+      - npm test
