--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,14 @@ variables:
   POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: postgres
 
-  testing:
-    services:
-      - postgres:latest
-    before_script:
-      - cd Tecky_C20TW_BAD_Project/Express
-    stage: testing
-    script:
-      - npm test
+testing:
+  services:
+    - postgres:latest
+
+  before_script:
+    - npm i -g pnpm
+    - pnpm i
+
+  stage: testing
+  script:
+    - echo "hi~"
