--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node:16.15.0-slim
 
 stages:
   - testing
+  - build
 
 variables:
   POSTGRES_DB: braille
@@ -21,3 +22,12 @@ testing:
   stage: testing
   script:
     - npm test
+
+  build:
+    dependencies:
+      - test
+    before_script:
+      - cd Tecky_C20TW_BAD_Project/express
+    stage: build
+    script:
+      - npm run build
