--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy:
   only:
     - production
   image:
-    - ubuntu:22.04
+    - "ubuntu:22.04"
   script:
     - echo "commit_hash = $CI-COMMIT_SHA"
     - ssh server " source -/.nvm/nvm.sh &&\ cd ~/Tecky_C20TW_BAD_Project &&\
