--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,10 +46,6 @@ deploy:
   stage: deploy
   only:
     - production
-  image:
-    - "ubuntu:22.04"
+
   script:
-    - echo "commit_hash = $CI-COMMIT_SHA"
-    - ssh server " source -/.nvm/nvm.sh &&\ cd ~/Tecky_C20TW_BAD_Project &&\
-      git fetch &&\ pnpm i -- prod &&\ cd Tecky_C20TW_BAD_Project/express &&\
-      yarn knex migrate:latest &&\ forever restart server.ts;"
+    - echo "Hi~"
