--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ testing:
 
   stage: testing
   script:
-    - npm test
+    - echo "hi~"
 
 build:
   dependencies:
@@ -49,6 +49,9 @@ deploy:
 
   only:
     - production
+
+  image:
+    - ubuntu:22.04
 
   script:
     - echo "Hi~"
