--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ variables:
 #     - echo "hi~"
 
 build:
-  dependencies:
-    - testing
+  # dependencies:
+  #   - testing
   before_script:
     - cd Tecky_C20TW_BAD_Project/express
   stage: build
