--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ testing:
     - postgres:latest
 
   before_script:
+    - pwd
     - cd Tecky_C20TW_BAD_Project/Express
     - npm i -g pnpm
     - pnpm i
