--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,7 @@ testing:
     - postgres:latest
 
   before_script:
-    - pwd
-    - cd Tecky_C20TW_BAD_Project/Express
+    - cd Express
     - npm i -g pnpm
     - pnpm i
 
@@ -29,7 +28,7 @@ build:
   # dependencies:
   #   - testing
   before_script:
-    - cd Tecky_C20TW_BAD_Project/express
+    - cd Express
   stage: build
   script:
     - npm run build
