--- a/Express/package.json
+++ b/Express/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node-dev server.ts",
     "dev": "ts-node-dev server.ts",
     "test": "jest --runInBand --forceExit",
-    "build": "tsc -p ."
+    "build": "npx tsc -p ."
   },
   "keywords": [],
   "author": "",
