--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,8 @@ testing:
 #     - npm run build
 
 deploy:
+  dependencies:
+    - testing
   before_script:
     - apt update
     - apt install --yes git openssh-client
@@ -45,9 +47,6 @@ deploy:
     - cd Tecky_C20TW_BAD_Project
 
   stage: deploy
-
-  only:
-    - production
 
   image: ubuntu:22.04
 
