--- a/Express/.env.test
+++ b/Express/.env.test
@@ -2,4 +2,9 @@ DB_NAME=braille
 DB_USER=veper
 DB_PASSWORD=abc123
 DB_HOST=localhost
-PORT=8000
+
+
+POSTGRES_HOST=localhost
+POSTGRES_DB=braille
+POSTGRES_USER=veper
+POSTGRES_PASSWORD=abc123
