--- a/Express/package.json
+++ b/Express/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-dev server.ts",
     "dev": "ts-node-dev server.ts",
-    "test": "jest --runInBand --forceExit",
+    "test": "jest --runInBand --forceExit --coverage",
     "build": "npx tsc -p ."
   },
   "keywords": [],
